Closed
Bug 370103
Opened 19 years ago
Closed 18 years ago
Crash [@ nsJARChannel::OnStartRequest] when passing null listener to AsyncOpen
Categories
(Core :: Networking: JAR, defect)
Core
Networking: JAR
Tracking
()
RESOLVED
FIXED
People
(Reporter: jwkbugzilla, Assigned: jwkbugzilla)
Details
Attachments
(2 files, 2 obsolete files)
|
128 bytes,
application/octet-stream
|
Details | |
|
1.99 KB,
patch
|
darin.moz
:
review+
Biesinger
:
superreview+
|
Details | Diff | Splinter Review |
I passed a null pointer to nsJARChannel::AsyncOpen accidentally and it crashed. There is a check missing in this method, patch to re-add it coming.
| Assignee | ||
Comment 1•19 years ago
|
||
Blame says Darin removed this check, asking him to review.
| Assignee | ||
Comment 2•19 years ago
|
||
Sorry, my bad. Darin didn't remove this check, it never was there in the first place. I was looking at the wrong code in bug 176919.
Updated•19 years ago
|
Attachment #254763 -
Flags: review?(darin.moz) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #254763 -
Flags: superreview?(cbiesinger)
Comment 3•19 years ago
|
||
Could you write a test for this and add it to modules/libjar/test/unit/, preferably as part of the patch?
Component: Networking → Networking: JAR
QA Contact: networking → networking.jar
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #254763 -
Attachment is obsolete: true
Attachment #254791 -
Flags: superreview?(jwalden+bmo)
Attachment #254791 -
Flags: review+
Attachment #254763 -
Flags: superreview?(cbiesinger)
Comment 5•19 years ago
|
||
Comment on attachment 254791 [details] [diff] [review]
Same patch and unit test
why not use a jar: URI here? the file doesn't even have to exist. and you'd avoid having the unit test break if someone uses flat chrome.
(I'd also declare Cc and Ci at global scope)
(Waldo's no superreviewer, but you could ask him for a second review)
Attachment #254791 -
Flags: superreview?(jwalden+bmo) → superreview-
| Assignee | ||
Comment 6•19 years ago
|
||
This is the modules/libjar/test/unit/data/test_bug370103.jar file used in the test.
| Assignee | ||
Comment 7•19 years ago
|
||
Attachment #254791 -
Attachment is obsolete: true
Attachment #254819 -
Flags: superreview?(cbiesinger)
Attachment #254819 -
Flags: review?(darin.moz)
Comment 8•19 years ago
|
||
Comment on attachment 254819 [details] [diff] [review]
Same patch and unit test (using own JAR file)
I'd have reused the existing .zip file...
Attachment #254819 -
Flags: superreview?(cbiesinger) → superreview+
| Assignee | ||
Comment 9•19 years ago
|
||
I didn't want a dependency on the testcase from another bug. If that testcase changes again, it shouldn't break this testcase.
Updated•19 years ago
|
Attachment #254819 -
Flags: review?(darin.moz) → review+
| Assignee | ||
Comment 10•18 years ago
|
||
Christian, can you check in this patch?
Updated•18 years ago
|
Whiteboard: [checkin needed]
Comment 11•18 years ago
|
||
mozilla/modules/libjar/nsJARChannel.cpp 1.125
mozilla/modules/libjar/test/unit/test_bug370103.js 1.1
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Comment 12•18 years ago
|
||
Shouldn't have forgotten this one:
mozilla/modules/libjar/test/unit/data/test_bug370103.jar 1.1
You need to log in
before you can comment on or make changes to this bug.
Description
•