Bug 370103 - Crash [@ nsJARChannel::OnStartRequest] when passing null listener to AsyncOpen p=Wladimir Palant <trev@gtchat.de> r=darin, sr=biesi